force-app/main/default/objects/Master_Medication_List__c/Master_Medication_List__c.object-meta.xml
<CustomObject>
    <label>Master Medication List</label>
    <nameField>
        <label>Master Medication List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Medications List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>