force-app/main/default/objects/Master_Medication_List__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSH#1</fullName>
            </value>
            <value>
                <fullName>FSH#2</fullName>
            </value>
            <value>
                <fullName>FSH#3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>