force-app/main/default/objects/Master_Medication_List__c/fields/Instructions_For_Use__c.field-meta.xml
<CustomField>
    <fullName>Instructions_For_Use__c</fullName>
    <label>Instructions For Use</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>