force-app/main/default/objects/Master_Medication_List__c/fields/Medication_Description__c.field-meta.xml
<CustomField>
    <fullName>Medication_Description__c</fullName>
    <label>Medication Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>