force-app/main/default/objects/Master_Medication_List__c/fields/Medication_Type__c.field-meta.xml
<CustomField>
    <fullName>Medication_Type__c</fullName>
    <label>Medication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medication_Types</valueSetName>
    </valueSet>
</CustomField>