force-app/main/default/objects/Master_Medication_List__c/fields/Normal_End_Day__c.field-meta.xml
<CustomField>
    <fullName>Normal_End_Day__c</fullName>
    <label>Normal End Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>