force-app/main/default/objects/Master_Medication_List__c/fields/Packet_Size__c.field-meta.xml
<CustomField>
    <fullName>Packet_Size__c</fullName>
    <label>Packet Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>