force-app/main/default/objects/Master_Medication_List__c/fields/Storage_Information__c.field-meta.xml
<CustomField>
    <fullName>Storage_Information__c</fullName>
    <label>Storage Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>