force-app/main/default/objects/Master_Medication_List__c/fields/Trigger_Delay_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Delay_in_Hours__c</fullName>
    <label>Trigger Delay in Hours</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>