force-app/main/default/objects/Master_Medication_List__c/listViews/All_Medications.listView-meta.xml
<ListView>
    <fullName>All_Medications</fullName>
    <columns>NAME</columns>
    <columns>Dosage__c</columns>
    <columns>Group__c</columns>
    <columns>Medication_Type__c</columns>
    <columns>Normal_Start_Day__c</columns>
    <columns>Normal_End_Day__c</columns>
    <columns>Trigger_Delay_in_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Medications</label>
</ListView>